Good report contents

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -230,7 +230,7 @@ journal = {ISAST Transactions on Electronic and Signal Processing}
   doi          = {10.5281/zenodo.1117372},
 }
 
-@misc{musdb18-hq,
+@misc{musdb18hq,
   author       = {Rafii, Zafar and
                   Liutkus, Antoine and
                   Stöter, Fabian-Robert and
@@ -555,4 +555,39 @@ month = {11},
 pages = {45-50},
 title = {Advantages of nonstationary gabor transforms in beat tacking},
 doi = {10.1145/2072529.2072542}
+}
+
+@article{demucs,
+  title={Music Source Separation in the Waveform Domain},
+  author={D{\'e}fossez, Alexandre and Usunier, Nicolas and Bottou, L{\'e}on and Bach, Francis},
+  journal={arXiv preprint arXiv:1911.13254},
+  year={2019}
+}
+
+@article{sparsitykowalski,
+author = {Kowalski, Matthieu and Torrésani, Bruno},
+year = {2009},
+month = {09},
+pages = {},
+title = {Sparsity and persistence: Mixed norms provide simple signal models with dependent coefficients},
+volume = {3},
+journal = {Signal Image and Video Processing},
+doi = {10.1007/s11760-008-0076-1}
+}
+
+@article{sparsitykowalski2,
+author = {Kowalski, Matthieu and Torrésani, Bruno},
+year = {2009},
+month = {04},
+pages = {},
+title = {Structured Sparsity: from Mixed Norms to Structured Shrinkage},
+volume = {53},
+journal = {SPARS09-Signal Processing with Adaptive Sparse Structured Representations}}
+
+@article{musicsepwindow,
+author = {Simpson, Andrew},
+year = {2015},
+month = {04},
+pages = {},
+title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks}
 }
